# math_lib

./: CMakeLists.txt  LICENSE  README.md
include/: math_capi.h
src/: math_lib.cpp
src/capi/: wrapper.cpp
test/: math_lib_test.cpp
